--- a/simulator/flask_skeleton/static/css/simulation_interface.css
+++ b/simulator/flask_skeleton/static/css/simulation_interface.css
@@ -19,12 +19,17 @@
 
 
 .header {
-    padding-top: .5%;
-    padding-bottom: .5%;
-    font-size: 55px;
+    padding-top: 10px;
+    padding-bottom: 6px;
+    padding-left: 15px;
+    font-size: 26px;
     color: var(--offWhite);
     background-color: var(--slateGrey);
     
+}
+
+.header h1 {
+    padding-left: 0px;
 }
 
 .entire_page {
@@ -35,12 +40,13 @@
 .initialization_menu {
     background-color:var(--darkSlateGrey);
     color: var(--offWhite);
-    padding:.5%;
-    font-size: 175%;
+    padding-left: 15px;
+    font-size: 16px;
 }
 
-h3.initialization_menu {
-    font-size: 40px;
+.initialization_menu h3 {
+    font-size: 20px;
+    padding-left: 0px;
 }
 
 .error_message {
@@ -73,11 +79,11 @@ h3.initialization_menu {
 .select_analysis {
     display: grid;
     grid-template-columns: auto auto;
-    border-top: 8px dashed var(--slateGrey);
-    border-bottom: 8px solid var(--slateGrey);
+    border-top: 4px dashed var(--slateGrey);
+    border-bottom: 4px solid var(--slateGrey);
     background-color: var(--darkSlateGrey);
-    padding-top: .5%;
-    padding-bottom: .5%;
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
 
 .turn_history {
@@ -104,7 +110,7 @@ h2.turn_history{
 
 .analysis_option {
     text-align: center;
-    font-size: 140%;
+    font-size: 20px;
     background-color: var(--darkSlateGrey);
     color: var(--offWhite);
     vertical-align: middle;
@@ -113,18 +119,19 @@ h2.turn_history{
 }
 
 h4.analysis_option{
-    font-size: 125%;
+    font-size: 20px;
     padding-bottom: 6px;
 }
 
-label.analysis_option{
+label.analysis_option {
+    font-size: 16px;
     padding-bottom: 6px;
 }
 
 .initialization_menu_form {
     color: var(--offWhite);
     font-size: 100%;
-    padding-bottom: 10px;
+    padding-bottom: 6px;
 }
 
 .initialization_menu_form_black_override {
@@ -133,23 +140,27 @@ label.analysis_option{
 }
 
 .score_display {
-    margin: 10px;
-    margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-right: 10px;
+    margin: 20px;
     border-top: 5px solid var(--pikRedHighlight);
     border-right: 5px solid var(--pikBlueHighlight);
     border-bottom: 5px solid var(--pikBlueHighlight);
     border-left: 5px solid var(--pikRedHighlight);
     border-radius: 20px;
     background-color: var(--lightSlateGreyTranslucent);
-    padding: 7px;
-    padding-top: 9px;
+    padding: 15px;
     max-width: 50%;
     min-width: fit-content;
     min-height: fit-content;
     overflow-y: auto;
+}
+
+.score_display h2 {
+    font-size: 20px;
+}
+
+.score_display h4 {
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .turn_input {
@@ -180,12 +191,13 @@ label.analysis_option{
     display: inline-flex;
     font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 600;
+    font-size: 14px;
     justify-content: center;
     line-height: 1.25;
     margin: 0;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     min-height: 3rem;
-    padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+    padding: 5px 20px 5px 20px;
     position: relative;
     text-decoration: none;
     transition: all 250ms;
@@ -228,11 +240,12 @@ label.analysis_option{
     display: inline-flex;
     font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 600;
+    font-size: 14px;
     justify-content: center;
     line-height: 1.25;
     margin: 0;
     min-height: 3rem;
-    padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+    padding: 5px 20px 5px 20px;
     position: relative;
     text-decoration: none;
     transition: all 250ms;
@@ -246,20 +259,21 @@ label.analysis_option{
 
   .instructions{
     background-color: var(--darkSlateGrey);
-    padding: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
   }
 
   summary {
-    background: url('../icons/help.svg') 20px 20px no-repeat;
+    background: url('../icons/help.svg') 10px 10px no-repeat;
     background-color: var(--pikBlueHighlight);
     color: var(--offWhite);
     border-radius: 5px;
     list-style: none;
     padding: 10px;
-    padding-left: 60px;
+    padding-left: 46px;
     padding-right: 20px;
-    margin-left: 20px;
-    font-size: 20px;
+    margin-left: 15px;
+    font-size: 16px;
     max-width: max-content;
   }
 
@@ -288,3 +302,5 @@ label.analysis_option{
     left: 10px;
     top: -10px;
   }
+  
+  
